<resources>
    <string name="app_name">Arduino kezdőknek</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="adat_tipusok"><![CDATA[A változókat az adatok tárolására használhatjuk a programunkban.\n
        A bennük tárolt érték a programban változhat.\n
        A változókat használat előtt deklarálni kell és fel kell tölteni értékkel.\n
        Például:\n
        int bemenet1=0; // bemenet1 változót deklaráljuk, és értékét megadjuk 0-nak\n
        bemenet1= analogRead(1); //bemenet1-nek a 1-es analog bemeneten mérhető értéket adjuk \n
        A változó deklarálása több helyen is lehetséges. \n
        A program legelején vagy a void setup()-ban vagy később a programban bárhól. \n
        <b>Fontos<b> a megadás helye, mert ha a program elején adjuk meg akkor az a változó globális változó lesz (a program teljes terjedelmében érvényes). \n
        Ha viszont egy ciklusba adunk meg változót, akkor a többi részben nem lesz érvényes. \n
        ]]></string>
    <string name="allandok"><![CDATA[HIGH | LOW : magas, alacsony szint:\n
        Az alacsony 0V a magas pedig 5V. \n
        INPUT | OUTPUT| : bemenet, kimenet. \n
        TRUE | FALSE : A true az igaz a false a hamis. \n
        integer constants : egész szám allandó.\n
         floating point constants: legegő pontos állandó.]]></string>
    <string name="Char"><![CDATA[A char olyan adattípus, amely 1 byte memóriát foglal és az ASCII táblázatnak megfelelően egy karakter értékét tárolja. \n
        Mivel a karakterek mindig számként tárolódnak, ezért műveleteket is végrehajthatunk rajtuk. \n
        Például „A” + 5 = 70. A értéke az ASCII táblázatban 65.]]></string>
    <string name="boolen">Logikai változó amelynek két értéke lehet: igaz vagy hamis (true, false). 1 byte-ot foglal.</string>
    <string name="byte2">A byte egy 8-bites előjel nélküli számot tárol, tehát az értéke 0 és 255 között lehet.\n
        Pl. byte a=180</string>
    <string name="Int">Egészrész adat-típus szám tárolására. \n
    Az Arduino Uno 16 bites (2 bájtos) értékként tárolja a számot. E miatt az értéke maximum 32.767 -1 minimum értéke -32.768.\n
     Az Arduino Due, 32 biten(4 bájton) tárolja az érték. Ennek eredménye az, hogy a sor minimum értéke-2.147.483.648 maximum értéke pedig 2,147,483,647 . \n
     Példa:   int ledPin = 13;\n
    <b>FONTOS!</b> \n
	Ügyelni kell a túlcsordulásra.</string>
    <string name="Int_prog">
        int x;\n
        x = -32768;\n
        x = x - 1; // x értéke 32.767 lesz tehát megváltozik az előjel\n
        x = 32767;\n
        x = x + 1; // x értéke -32.768 lesz, tehát megváltozik az előjel</string>
    <string name="unsigned_int">Előjel nélküli egész szám. \n
        Értéke csak pozitív értéket vehet fel. \n
        Uno és Atmega lapoknál az értéke tehát 0-tól 65,535 lehet.</string>
    <string name="word">16 bites előjel nélküli számot tárolhatunk ugyanaz mint az unsigned int. \n
        word x=11111</string>
    <string name="long2">Nagy méretű változók tárolására, 32 biten tárolja a számokat (4 byte), a minimum érték -2.147.483.648 a maximum érték 2,147,483,647.\n
        long y=222.333</string>
    <string name="unsigned_long"><![CDATA[Az előzőhöz hasonlóan 32 biten tárolja az értéket, de előjel nélkül. \n
        Tehát az értéke  0 és 4294967295 (232-1) között lehet.]]></string>
    <string name="short2">A short egy 16bites adattípus. \n
        Minden arduino panel 16 biten (2bájton) tárolja az adatokat. \n
        Értéke minimum -32.768 (-215) a maximum értéke 32.767 (215)- 1).</string>
    <string name="float2"><![CDATA[Lebegőpontos szám. 32 biten (4 byte) tárolja a számokat. \n
        Nagyobb felbontású, mint az int. Értéke  3.4028235E+38 és -3.4028235E+38 közötti. (3.4028236*1038 és -3.4028235*1038). \n
        A számokat 7 tizedes pontossággal tudjuk megadni.]]></string>
    <string name="double2">Dupla lebegő pontos szám. \n
        Csak a due paneleknél mert a uno és és más atmega alapú lapok csak 4 byte-on tudják tárolni.</string>
     <string name="karakterlanc"><![CDATA[A karakterláncok esetében a tömb deklarálásánál mindig figyelembe kell venni azt, hogy a tömb elemszáma nagyobb legyen 1-el mint a kívánt elemszám. \n
        Erre azért van szükség mert a karakterlánc végét le kell zárni egy /0 elemmel. \n
        A fordító program erről ismeri fel a karakterlánc végét. \n
        A karakterláncot több félekép is deklarálhatjuk: \n
        char Tomb1[8] = {\'a\', \'r\', \'d\', \'u\', \'i\', \'n\', \'o\'};  \n
        // lezáró nélkül \n
        char Tomb2[8] = {\'a\', \'r\', \'d\', \'u\', \'i\', \'n\', \'o\', \'0\'};  \n
        // lezáró karakterrel \n
        Szövegként idézőjelekben – ha nem adjuk meg az elemek számát, a fordító megszámolja a karaktereket és hozzáadja a végéhez a lezáró null karaktert, ahogy az üres helyet is feltölti, mint a példában.]]></string>
    <string name="karakter_prog"><![CDATA[
            char Tomb4[ ] = "arduino";\n
            char Tomb5[8] ="arduino";\n
            char Tomb6[15] = "arduino"; ]]></string>
    <string name="karakterlanc2">Lehetséges a tömb definiálása lezáró elem nélkül is, de törekedjünk arra, hogy lezárjuk, mert a legtöbb függvény nincs erre felkészítve.\n
        Lezárás nélkül a programban oda nem illő karakterek jelenhetnek meg.
        Ha hosszú szöveget szeretnénk tárolni így is megtehetjük:</string>
    <string name="karakter_prog2">
        char Tomb[] = "az első rész”\n
        " itt a második részlet"\n
        " és a harmadik stb… /0";</string>
    <string name="string_object">A string osztály kifejezetten szöveg alapú adattípusok manipulálására jött létre. \n
        Az egyszerű karaktertömböktől eltérően az osztály példányain olyan függvényekkel is végezhetünk műveleteket, mint a vágás, az összefűzés, szövegrészletek keresése és cseréje. \n
        Ugyan a string adattípus használata ebből kifolyólag több memóriát igényel, mint a karakterláncé, használatuk mégis sokszor megtérül.</string>
    <string name="tomb">A tömb nem más, mint értékek/számok gyűjteménye, melyeket az ún. index számán (kb. sorban elfoglalt helyén át) érhető el. \n
        A tömb bármely elemét meg lehet így címezni. A tömb indexelése a 0. azonosítóval kezdődik. A tömböt - a többi változóhoz hasonlóan - használat előtt deklarálni kell - és lehetőség szerint a kezdőértékkel feltölteni.\n
        Példa:</string>
    <string name="tomb_prog"> int elsotomb[]= {ertek0, ertek1, ertek2, ertek3…….}\n
        int elsotomb [5]; // deklaráljuk az elsotomb nevű tömbünket amely 6 elemet tartalmaz\n
        elsotomb [3] = 10; // értéket adunk a tömbünk 4. elemének</string>
    <string name="tomb2">Kiolvasni a tömbből úgy tudunk, hogy hivatkozunk az index számára.\n
        Például:</string>
    <string name="pinMode">Az utasítás beállítja a megadott kivezetés viselkedését, azt hogy bemenet vagy kimenet, illetve bemenetként bekapcsolt felhúzó ellenállással működjön. \n
        Szintaxisa: \n
        pinMode(kivezetés,mód) \n
        //először a kivezetés számát adjuk meg azután a felhasználási módot.</string>
    <string name="pinmode_prog">
        int ledpin=13\n
        pinMode(ledpin,OUTPUT)</string>
    <string name="pinMode2">A beépített felhúzó ellenállás használata esetén a megadott bemenetet egy belső ellenállással az 5V-ra csatlakoztatja.\n
        Így külön ellenállás beépítésére már nincs szükség.\n
        A példaprogram itt található:\n
        http://www.arduino.cc/en/Tutorial/InputPullupSerial\n
        vagy az arduino programban a file>minták>digital>digitalinputpullup\n
        A nyomógomb bekötésének egy példája a belső felhúzó ellenállás használata esetén</string>
    <string name="digital_write">Digitális kimenet szintjének a beállítása. A kimenet lehet magas (HIGH 5V ), vagy alacsony(LOW 0V) szint. \n
        Szintaxisa:</string>
    <string name="digitalwrite_prog">
        digitalWrite(kivezetés, érték) // az érték lehet HIGH, vagy LOW\n
        digitalWrite(13,HIGH) vagy pedig\n
        int ledpin=13\n
        digitalWrite(ledpin, LOW)</string>
    <string name="digital_write2"><![CDATA[Példafeladat: \n
    az arduino programban a file>minták>digital>BlinkWithoutDelay vagy a file>minták>basic>Blink]]></string>
    <string name="digital_read">Digitális lábon lévő aktuális jelszint beolvasása. \n
        Két értéket vehet fel alacsony vagy magas szint, tehát 1 vagy 0. \n
        Szintaxisa:</string>
    <string name="digital_read_prog">
        digitalRead(7) vagy \n
        int inputPin=3\n
        digitalRead(inputPin)</string>
    <string name="math1">A megadott két paraméterből a kisebb értékét adja vissza.</string>
    <string name="math2">min(x ,y); \n
        sensorertek = min (sensor1, 100) // biztosítható, hogy a sensorertek változó soha nem lesz nagyobb mint 100</string>
    <string name="math3">Az előzővel ellentétben a két érték közül a nagyobbat adja vissza.</string>
    <string name="math4">sensorertek2 = max (sensor2, 50) // biztosítható, hogy a sensorertek2 változó soha nem lesz kisebb mint 50</string>
    <string name="math5">A megadott paraméter abszolút értékét adja vissza. \n
        abs(x) //ha x=0 akkor a visszaadott érték 0, ha x negatív akkor az abszolút értékea visszaadott érték.</string>
    <string name="math6">A megadott értéket korlátozza a két határérték közé. Nevezhetjük egy úgynevezett limiternek is.\n
        Szintaxisa: \n
        constrain(x, a, b); // ahol x értékét korlátozza a és b közé.\n
        Visszaadási értéke: ha a &lt; x &lt; b akkor x, ha x &lt; a akkor a, és ha x>b akkor pedig b.\n
        Szintaxisa:</string>
    <string name="math7">constrain (változó,alsóhatár,felsőhaár)\n
        constrain (x, 25,250) // tehát x 25 és 250 közti számot fog felvenni</string>
    <string name="math8"><![CDATA[Arányosan szétosztja egy számtartományból egy másik számtartományba. \n
        Az alsó és felső értékeket rendeli egymáshoz és a számokat ehhez igazítja arányosan. \n
        Ez az utasítás csak egész számokkal működik. \n
        map(value, fromLow, fromHigh, toLow, toHigh)\n
        value: az érték, amit arányosítani akarunk (gyakran a változónk neve) \n
        fromLow: az aktuális értékünk legalsó határa \n
        fromHigh: az aktuális értékünk legfelső határa \n
        toLow: a cél érték legalsó határa \n
        toHigh: a cél érték legfelső határa \n
        Az alábbi program és áramkőr a map utasítás használatára mutat be egy példát. \n
        Az áramkőr egy fotóellenállás változó értéke szerinti frekvenciával szólaltatja meg a hangszórót.]]></string>
    <string name="math9"><![CDATA[void setup() { //soros kommunikáció inicializálása): \n
        Serial.begin(9600);\n
            }\n
        void loop() { \n
        // read the sensor:   \n
        int sensorReading = analogRead(A0); // a szenzor értékének a beolvasása a sensorReadind változóba \n
        Serial.println(sensorReading); \n
        //a sensorReading kiíratása a soros portra \n
        // a map utasítással skálázzuk az analóg bemenetet(ami 400-1000-ig változik a szenzor állapotától függően) 120-1500-as határ közé (ez lesz a kimeneti tartomány) \n
        int thisPitch = map(sensorReading, 400, 1000, 120, 1500); \n
        // a thisPitch értékét fogjuk megszólaltatni \n
        tone(9, thisPitch, 10); \n
        delay(1); // 1milisekudumos időzítés a stabilitás miatt \n
        }]]></string>
    <string name="math10">A megadott szám hatványértékét számolja ki.</string>
    <string name="math11">pow(szám, hatványkitevő) \n
        pow(5,7) // például 5 a 7.-en tehát 78125</string>
    <string name="math12">A megadott szám négyzetgyökét adja vissza. \n
        sqrt(25) // a 25 négyzetgyöke tehát 5</string>
</resources>