<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.zoole.myapplication7.Valtozok">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Változók"
                style="@style/bekezdes" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Állandók"
                style="@style/bekezdes2"/>

            <TextView
                style="@style/szovegtorzs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/allandok" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Adat típusok"
                style="@style/bekezdes2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/adat_tipusok"
                style="@style/szovegtorzs"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Boolen"
                style="@style/bekezdes2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/szovegtorzs"
                android:text="@string/boolen" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Char"
                style="@style/bekezdes2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Char"
                style="@style/szovegtorzs" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Byte"
                style="@style/bekezdes2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/szovegtorzs"
                android:text="@string/byte2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Int"
                style="@style/bekezdes2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Int"
                style="@style/szovegtorzs"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Int_prog"
                style="@style/program"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Unsigned int"
                style="@style/bekezdes2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/unsigned_int"
                style="@style/szovegtorzs" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Word"
                style="@style/bekezdes2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/word"
                style="@style/szovegtorzs"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="long"
                style="@style/bekezdes2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/long2"
                style="@style/szovegtorzs"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="unsigned long"
                style="@style/bekezdes2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/unsigned_long"
                style="@style/szovegtorzs"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="short"
                style="@style/bekezdes2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/short2"
                style="@style/szovegtorzs"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="float"
                style="@style/bekezdes2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/float2"
                style="@style/szovegtorzs"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="double"
                style="@style/bekezdes2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/double2"
                style="@style/szovegtorzs"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="string - char array karakterlánc, karaktertömb"
                style="@style/bekezdes2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/karakterlanc"
                style="@style/szovegtorzs"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/karakter_prog"
                style="@style/program"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/karakterlanc2"
                style="@style/szovegtorzs"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/karakter_prog2"
                style="@style/program"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="String – object"
                style="@style/bekezdes2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/string_object"
                style="@style/szovegtorzs"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="array: (tömb)"
                style="@style/bekezdes2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tomb"
                style="@style/szovegtorzs"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tomb_prog"
                style="@style/program"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tomb2"
                style="@style/szovegtorzs"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="a= elsotomb[3] // ekkor a értéke 10 lesz"
                style="@style/program"
                android:layout_marginBottom="30dp"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>
