<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:Idő="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.zoole.myapplication7.AnalogUtasitasok">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Matematikai függvények"
                style="@style/bekezdes"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="min()"
                style="@style/bekezdes2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/math1"
                style="@style/szovegtorzs"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/math2"
                style="@style/program"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="max()"
                style="@style/bekezdes2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/math3"
                style="@style/szovegtorzs"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/math4"
                style="@style/program" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="abs()"
                style="@style/bekezdes2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/math5"
                style="@style/szovegtorzs"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="constrain()  "
                style="@style/bekezdes2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/math6"
                style="@style/szovegtorzs"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/math7"
                style="@style/program"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="map()"
                style="@style/bekezdes2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/math8"
                style="@style/szovegtorzs"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/map1"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/map2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/math9"
                style="@style/program"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="pow() hatványozás"
                style="@style/bekezdes2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/math10"
                style="@style/szovegtorzs"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/math11"
                style="@style/program"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="sqrt() négyzetgyök"
                style="@style/bekezdes2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/math12"
                style="@style/szovegtorzs"
                android:layout_marginBottom="30dp"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>
